# video-to-Transcription-by-gemini-fastapi

./: .cursorrules  README.md  main.py  pyproject.toml
